--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="container yellow">
     <div>
-      <img src="./images/icon-sedans.svg" alt="Sedan">
+      <img src="../images/icon-sedans.svg" alt="Sedan">
       <h1>Sedans</h1>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
         or on your next road trip.</p>
@@ -26,7 +26,7 @@
   </div>
   <div class="container green">
     <div>
-      <img src="./images/icon-suvs.svg" alt="Luxury">
+      <img src="./images/icon-luxury.svg" alt="Luxury">
       <h1>SUVs</h1>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
         and off-road adventures.</p>
