--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="container yellow">
     <div>
-      <img src="../images/icon-sedans.svg" alt="Sedan">
+      <img src="./images/icon-sedans.svg" alt="Sedan">
       <h1>Sedans</h1>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
         or on your next road trip.</p>
